@@ -2,7 +2,7 @@
 # Kernel/Config/Defaults.pm - Default Config file for OTRS kernel
 # Copyright (C) 2001-2012 OTRS AG, http://otrs.org/
 # --
-# $Id: Defaults.pm,v 1.400 2012/01/13 09:00:33 mg Exp $
+# $Id: Defaults.pm,v 1.401 2012/01/24 08:41:20 mg Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (AGPL). If you
@@ -29,7 +29,7 @@ use warnings;
 use 5.008_006;
 
 use vars qw($VERSION);
-$VERSION = qw($Revision: 1.400 $) [1];
+$VERSION = qw($Revision: 1.401 $) [1];
 
 # prepend '../Custom', '../Kernel/cpan-lib' and '../' to the module search path @INC
 use File::Basename;
@@ -157,7 +157,7 @@ sub LoadDefaults {
     $Self->{DefaultUsedLanguages} = {
         ar_SA   => 'Arabic (Saudi Arabia)',
         bg      => 'Bulgarian (&#x0411;&#x044a;&#x043b;&#x0433;&#x0430;&#x0440;&#x0441;&#x043a;&#x0438;)',
-        ct      => 'Catal&agrave;',
+        ca      => 'Catal&agrave;',
         cs      => 'Czech (&#x010c;esky)',
         da      => 'Dansk',
         de      => 'Deutsch',
@@ -1961,6 +1961,6 @@ did not receive this file, see L<http://www.gnu.org/licenses/agpl.txt>.
 
 =head1 VERSION
 
-$Revision: 1.400 $ $Date: 2012/01/13 09:00:33 $
+$Revision: 1.401 $ $Date: 2012/01/24 08:41:20 $
 
 =cut
